# nfsense

./: .gitignore  Cargo.toml  README.md  build-image.sh  go.mod  go.sum  install.sh  main.go  setup.go
.forgejo/workflows/: build.yaml  image.yaml
.zed/: settings.json
api/: apply.go  config.go  main.go
api/firewall/: addresses.go  destination_nat_rules.go  firewall.go  forward_rules.go  services.go  source_nat_rules.go
client/: .gitignore  README.md  eslint.config.js  eslint.config.ts  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
client/src/: App.vue  api.ts  definitions.ts  env.d.ts  main.ts  plugins.ts  router.ts  util.ts  vite-env.d.ts
cmd/: api.go  config.go  main.go
internal/auth/: auth.go
internal/chrony/: apply.go  config.go  template.go
internal/config/: apply.go  default.go  diff.go  discard.go  get.go  load.go  manager.go  save.go  transaction.go
internal/definitions/: address.go  config.go  destination_nat.go  firewall.go  hardwareaddress.go  interface.go  ipcidr.go  ipnet.go  match.go  network.go  object.go  service.go  static_route.go
internal/dhcp_server/: apply.go  defaults.go  dhcpv4.go  dhcpv6.go  template.go
internal/interfaces/: interfaces.go  template.go
internal/jsonrpc/: error.go  handler.go  register.go  response.go
internal/networkd/: apply.go  configuration.go  template.go
internal/nftables/: action.go  apply.go  config.go  match.go  template.go
internal/server/: api.go  server.go  session.go  webinterface.go  websocket.go
internal/session/: cookie.go  session.go
internal/unbound/: apply.go  server.go  template.go
internal/util/: address.go  file.go  net.go  service.go  set.go
internal/validation/: schema.go  validation.go
mkosi/: mkosi.conf  mkosi.finalize  mkosi.postinst.chroot  mkosi.postoutput
mkosi/mkosi.conf.d/: trixie-tools.conf  trixie.conf  trixie.sources
pkg/definitions/: address.go  config.go  firewall.go  match.go  netfilter.go  rule.go  rules.go  service.go  source_nat.go
pkg/jsonrpc/: error.go  handler.go  method.go  request.go  response.go
pkg/nftables/: config.go  match.go  template.go
pkg/server/: api.go  jsonrpc.go  server.go  session.go  websocket.go
pkg/session/: session.go
pkg/util/: address.go  service.go
src/: config_manager.rs  definitions.rs  lib.rs  main.rs  router.rs  state.rs  varlink.rs
src/api/: config.rs  firewall.rs  mod.rs  network.rs  object.rs  service.rs  system.rs  vpn.rs
src/apply/: chrony.rs  kea.rs  mod.rs  networkd.rs  nftables.rs  unbound.rs  util.rs
src/definitions/: config.rs  firewall.rs  macro_db.rs  mod.rs  network.rs  object.rs  service.rs  system.rs  vpn.rs
src/json_rpc/: error.rs  mod.rs
src/templates/: mod.rs
src/validation/: mod.rs
src/web/: auth.rs  mod.rs  router.rs  rpc.rs
(+315 files in other folders)
