[package]
name = "nfsense"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.89"
axum = { version = "0.8.4", features = ["macros"] }
ipnet = { version = "2.11.0", features = ["serde"] }
jsonrpsee = { version = "0.20.3", features = ["server"] }
macaddr = { version = "1.0.1", features = ["serde"] }
pwhash = "1.0.0"
rbtag = "0.3.0"
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
tower-cookies = "0.11.0"
tower-http = "0.6.6"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
uuid = { version = "1.18.1", features = ["v4"] }
tera = "1"
lazy_static = "1.4.0"
garde = { version = "0.20.0", features = ["full"] }
once_cell = "1.19.0"
regex = "1.10.5"
zbus = { version = "4.4.0", default-features = false, features = ["tokio"] }
zbus_systemd = { version = "0.25600.0", features = [
    "systemd1",
    "network1",
    "resolve1",
    "hostname1",
    "timedate1",
] }
nftables = "0.6.3"
